add change color button on click / add all pizzas / add all price

--- a/src/Components/All/All.css
+++ b/src/Components/All/All.css
@@ -45,3 +45,9 @@
   font-size: 30px;
   font-weight: 500;
 }
+.btn-order {
+  width: 100px;
+}
+.active {
+  background-color: rgb(196, 196, 196);
+}
