--- a/src/Components/Basket/Basket.css
+++ b/src/Components/Basket/Basket.css
@@ -1,5 +1,5 @@
 .bsk-pizza {
-  background-color: rgb(107, 207, 141);
+  background-color: rgb(137, 226, 185);
   padding: 5px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -9,5 +9,16 @@
 .btn-plus-minus {
   width: 50px;
   height: 50px;
+  border: 4px solid orange;
+  color: orange;
+  /* font-size: 50px; */
+  font-weight: 900;
   border-radius: 25px;
+}
+/* .znak {
+  font-size: 50px;
+} */
+.activeOrange {
+  border: 4px solid gainsboro;
+  color: gainsboro;
 }
